test/invalid/aug_assign_non_numeric_value.py
# Augmented assignment with non-numeric value
def main() -> None:
    x: int = 5
    y: 'str' = "hello"
    x += y
    print(x)
